--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-index.html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -211,6 +210,89 @@ index.html
             box-shadow: 0 16px 35px rgba(249, 115, 22, 0.35);
         }
 
+        .memories {
+            padding: clamp(28px, 6vw, 60px);
+            background: rgba(15, 23, 42, 0.35);
+            border-top: 1px solid rgba(255, 255, 255, 0.06);
+        }
+
+        .section-heading {
+            display: grid;
+            gap: 14px;
+            text-align: center;
+            margin-bottom: clamp(28px, 5vw, 42px);
+        }
+
+        .section-heading h2 {
+            margin: 0;
+            font-size: clamp(1.8rem, 5vw, 2.4rem);
+            font-family: 'Playfair Display', Georgia, serif;
+        }
+
+        .section-heading p {
+            margin: 0;
+            color: var(--text-muted);
+            font-size: clamp(0.95rem, 2.4vw, 1.05rem);
+        }
+
+        .gallery-grid {
+            display: grid;
+            gap: clamp(12px, 2.5vw, 24px);
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        }
+
+        .gallery-grid figure {
+            position: relative;
+            overflow: hidden;
+            border-radius: 18px;
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            background: rgba(15, 23, 42, 0.6);
+            aspect-ratio: 4 / 5;
+            box-shadow: 0 18px 32px rgba(15, 23, 42, 0.35);
+        }
+
+        .gallery-grid img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.4s ease;
+        }
+
+        .gallery-grid figure:hover img {
+            transform: scale(1.05);
+        }
+
+        .video-card {
+            margin-top: clamp(36px, 6vw, 56px);
+            display: grid;
+            gap: clamp(18px, 4vw, 32px);
+            align-items: center;
+            padding: clamp(24px, 5vw, 36px);
+            border-radius: 24px;
+            background: rgba(15, 23, 42, 0.55);
+            border: 1px solid rgba(249, 115, 22, 0.2);
+        }
+
+        .video-copy h3 {
+            margin: 0;
+            font-size: clamp(1.4rem, 4vw, 1.9rem);
+            font-family: 'Playfair Display', Georgia, serif;
+        }
+
+        .video-copy p {
+            margin: 8px 0 0;
+            color: var(--text-muted);
+            line-height: 1.6;
+        }
+
+        .video-card video {
+            width: 100%;
+            border-radius: 18px;
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            background: #000;
+            box-shadow: 0 20px 40px rgba(15, 23, 42, 0.45);
+        }
+
         footer {
             padding: clamp(24px, 5vw, 40px);
             text-align: center;
@@ -231,6 +313,16 @@ index.html
 
             .details-card:last-child {
                 grid-column: span 2;
+            }
+        }
+
+        @media (min-width: 960px) {
+            .video-card {
+                grid-template-columns: 1.1fr 1fr;
+            }
+
+            .video-copy {
+                max-width: 420px;
             }
         }
 
@@ -306,10 +398,42 @@ index.html
             </div>
         </section>
 
+        <section class="memories" id="recuerdos">
+            <div class="section-heading">
+                <h2>Momentos que guardo conmigo</h2>
+                <p>
+                    Un mini highlight de nosotros: risas, abrazos y esa chispa que hace que todo valga la pena.
+                </p>
+            </div>
+            <div class="gallery-grid" aria-label="Galer&iacute;a de recuerdos">
+                <figure><img src="FV/foto01.jpg" alt="Foto juntos sonriendo" loading="lazy"></figure>
+                <figure><img src="FV/foto02.jpg" alt="T&uacute; y yo abrazados" loading="lazy"></figure>
+                <figure><img src="FV/foto03.jpg" alt="Selfie divertida" loading="lazy"></figure>
+                <figure><img src="FV/foto04.jpg" alt="Momento de viaje" loading="lazy"></figure>
+                <figure><img src="FV/foto05.jpg" alt="Brindis juntos" loading="lazy"></figure>
+                <figure><img src="FV/foto06.jpg" alt="Foto al atardecer" loading="lazy"></figure>
+                <figure><img src="FV/foto07.jpg" alt="Caminata de la mano" loading="lazy"></figure>
+                <figure><img src="FV/foto08.jpg" alt="Risa espont&aacute;nea" loading="lazy"></figure>
+                <figure><img src="FV/foto09.jpg" alt="Mirada especial" loading="lazy"></figure>
+                <figure><img src="FV/foto10.jpg" alt="Detalle cari&ntilde;oso" loading="lazy"></figure>
+            </div>
+            <div class="video-card">
+                <div class="video-copy">
+                    <h3>Video sorpresa</h3>
+                    <p>
+                        Para cerrar, un clip cortito que me recuerda lo bien que la pasamos cada d&iacute;a. Dale play y ven a celebrarlo en vivo conmigo.
+                    </p>
+                </div>
+                <video controls playsinline preload="metadata">
+                    <source src="FV/video01.mp4" type="video/mp4">
+                    Tu navegador no soporta video HTML5.
+                </video>
+            </div>
+        </section>
+
         <footer>
             Hecho con todo mi amor para ti. Te veo ma&ntilde;ana para quedarnos hasta que el jazz se apague.
         </footer>
     </main>
 </body>
 </html>
-
