--- a/index.html
+++ b/index.html
@@ -234,41 +234,82 @@
             color: var(--text-soft);
         }
 
-        .gallery-grid {
+        .gallery-shell {
+            position: relative;
             display: grid;
-            gap: clamp(12px, 2.5vw, 22px);
-            grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+            gap: clamp(18px, 4vw, 28px);
         }
 
-        .gallery-grid figure {
-            aspect-ratio: 4/5;
+        .gallery-track {
+            display: grid;
+            grid-auto-flow: column;
+            grid-auto-columns: minmax(180px, 1fr);
+            gap: clamp(16px, 3vw, 24px);
+            overflow-x: auto;
+            padding-bottom: 8px;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+            scrollbar-width: none;
+        }
+
+        .gallery-track::-webkit-scrollbar { display: none; }
+
+        .gallery-item {
+            scroll-snap-align: center;
             border-radius: 18px;
             overflow: hidden;
             border: 1px solid var(--border);
             background: #f7f9fa;
             box-shadow: 0 18px 30px rgba(188, 196, 205, 0.3);
+            aspect-ratio: 4 / 5;
             position: relative;
         }
 
-        .gallery-grid figure::after {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: linear-gradient(140deg, transparent, rgba(47, 143, 157, 0.12));
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
+        .gallery-item::after {\n            content: "";\n            position: absolute;\n            inset: 0;\n            background: linear-gradient(140deg, transparent, rgba(47, 143, 157, 0.14));\n            opacity: 0;\n            transition: opacity 0.3s ease;\n            pointer-events: none;\n        }
 
-        .gallery-grid img {
+        .gallery-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
             transition: transform 0.35s ease;
+            cursor: pointer;
         }
 
-        .gallery-grid figure:hover img { transform: scale(1.04); }
+        .gallery-item img:focus {
+            outline: 3px solid rgba(47, 143, 157, 0.4);
+            outline-offset: 4px;
+        }
 
-        .gallery-grid figure:hover::after { opacity: 1; }
+        .gallery-item:hover img { transform: scale(1.04); }
+
+        .gallery-item:hover::after { opacity: 1; }
+
+        .gallery-controls {
+            display: flex;
+            justify-content: center;
+            gap: 16px;
+        }
+
+        .gallery-controls button {
+            width: 48px;
+            height: 48px;
+            border-radius: 999px;
+            border: 1px solid var(--border);
+            background: var(--surface);
+            color: var(--accent);
+            cursor: pointer;
+            font-size: 1.4rem;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 12px 24px rgba(186, 194, 205, 0.32);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .gallery-controls button:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 16px 32px rgba(186, 194, 205, 0.36);
+        }
 
         .video-card {
             margin-top: clamp(38px, 6vw, 56px);
@@ -312,6 +353,90 @@
             border-top: 1px solid var(--border);
         }
 
+        .lightbox {
+            position: fixed;
+            inset: 0;
+            background: rgba(15, 22, 32, 0.82);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: clamp(24px, 6vw, 60px);
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.25s ease;
+            z-index: 40;
+        }
+
+        .lightbox.is-open {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .lightbox-content {
+            position: relative;
+            max-width: min(860px, 100%);
+            width: 100%;
+            display: grid;
+            gap: 16px;
+            justify-items: center;
+        }
+
+        .lightbox-image {
+            width: 100%;
+            border-radius: 18px;
+            border: 1px solid rgba(255, 255, 255, 0.55);
+            box-shadow: 0 28px 45px rgba(0, 0, 0, 0.4);
+            background: #000;
+        }
+
+        .lightbox-caption {
+            color: rgba(255, 255, 255, 0.86);
+            font-size: 1rem;
+            text-align: center;
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: -20px;
+            right: -20px;
+            width: 44px;
+            height: 44px;
+            border-radius: 999px;
+            border: none;
+            background: rgba(15, 22, 32, 0.75);
+            color: #fff;
+            font-size: 1.6rem;
+            cursor: pointer;
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.35);
+        }
+
+        .lightbox-nav {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 46px;
+            height: 46px;
+            border-radius: 999px;
+            border: none;
+            background: rgba(15, 22, 32, 0.7);
+            color: #fff;
+            font-size: 1.6rem;
+            cursor: pointer;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .lightbox-nav.prev { left: -18px; }
+        .lightbox-nav.next { right: -18px; }
+
+        @media (max-width: 640px) {
+            .lightbox-close { top: -10px; right: -10px; }
+            .lightbox-nav.prev { left: 6px; }
+            .lightbox-nav.next { right: 6px; }
+            .lightbox-nav { background: rgba(15, 22, 32, 0.55); }
+        }
+
         @media (min-width: 768px) {
             .timeline-grid { grid-template-columns: repeat(3, minmax(0, 1fr)); }
             .details { grid-template-columns: repeat(2, minmax(0, 1fr)); }
@@ -349,7 +474,7 @@
                 </article>
                 <article class="timeline-item">
                     <div class="time"><span>20:15</span> Terraza privada</div>
-                    <div class="activity">Coctel frente a la ca&#237;da del sol</div>
+                    <div class="activity">Coctel frente a la ca&iacute;da del sol</div>
                     <p class="description">
                         Mesa lista, algo fresco para picar y playlist liviana. Ideal para seguir sumando historias sin distracciones.
                     </p>
@@ -391,20 +516,26 @@
 
         <section class="memories" id="recuerdos">
             <div class="section-heading">
-                <h2>Galer&#237;a Meryposa</h2>
+                <h2>Galer&iacute;a Meryposa</h2>
                 <p>Peque&ntilde;a selecci&oacute;n de fotos que me recuerdan por qu&eacute; disfruto cada plan a tu lado.</p>
             </div>
-            <div class="gallery-grid" aria-label="Galer&#237;a de recuerdos">
-                <figure><img src="FV/foto01.jpg" alt="Foto juntos sonriendo" loading="lazy"></figure>
-                <figure><img src="FV/foto02.jpg" alt="Abrazo en exterior" loading="lazy"></figure>
-                <figure><img src="FV/foto03.jpg" alt="Selfie divertida" loading="lazy"></figure>
-                <figure><img src="FV/foto04.jpg" alt="Escapada de fin de semana" loading="lazy"></figure>
-                <figure><img src="FV/foto05.jpg" alt="Brindis" loading="lazy"></figure>
-                <figure><img src="FV/foto06.jpg" alt="Atardecer juntos" loading="lazy"></figure>
-                <figure><img src="FV/foto07.jpg" alt="Caminata" loading="lazy"></figure>
-                <figure><img src="FV/foto08.jpg" alt="Risa espont&#225;nea" loading="lazy"></figure>
-                <figure><img src="FV/foto09.jpg" alt="Retrato de Mery" loading="lazy"></figure>
-                <figure><img src="FV/foto10.jpg" alt="Detalle cari&ntilde;oso" loading="lazy"></figure>
+            <div class="gallery-shell">
+                <div class="gallery-track" id="galleryTrack" aria-label="Recuerdos en carrusel">
+                    <figure class="gallery-item"><img src="FV/foto01.jpg" alt="Foto juntos sonriendo" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto02.jpg" alt="Abrazo en exterior" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto03.jpg" alt="Selfie divertida" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto04.jpg" alt="Escapada de fin de semana" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto05.jpg" alt="Brindis" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto06.jpg" alt="Atardecer juntos" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto07.jpg" alt="Caminata" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto08.jpg" alt="Risa espont&aacute;nea" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto09.jpg" alt="Retrato de Mery" loading="lazy"></figure>
+                    <figure class="gallery-item"><img src="FV/foto10.jpg" alt="Detalle cari&ntilde;oso" loading="lazy"></figure>
+                </div>
+                <div class="gallery-controls" aria-hidden="false">
+                    <button type="button" data-direction="-1" aria-label="Ver fotos anteriores">&#10094;</button>
+                    <button type="button" data-direction="1" aria-label="Ver fotos siguientes">&#10095;</button>
+                </div>
             </div>
             <div class="video-card">
                 <div class="video-copy">
@@ -424,8 +555,131 @@
             Nos vemos ma&ntilde;ana, Mery. Paso por ti y arrancamos puntuales a las 19:00.
         </footer>
     </main>
+
+    <div class="lightbox" id="galleryLightbox" aria-hidden="true" role="dialog">
+        <div class="lightbox-content">
+            <button class="lightbox-close" type="button" aria-label="Cerrar galeria">&times;</button>
+            <button class="lightbox-nav prev" type="button" data-direction="-1" aria-label="Foto anterior">&#10094;</button>
+            <img class="lightbox-image" src="" alt="">
+            <button class="lightbox-nav next" type="button" data-direction="1" aria-label="Foto siguiente">&#10095;</button>
+            <div class="lightbox-caption"></div>
+        </div>
+    </div>
+
+    <script>
+        (function () {
+            const track = document.getElementById('galleryTrack');
+            const controlButtons = document.querySelectorAll('.gallery-controls button');
+            const galleryImages = track ? Array.from(track.querySelectorAll('img')) : [];
+            let autoScrollId = null;
+
+            const scrollAmount = () => track ? track.clientWidth * 0.9 : 0;
+
+            const stopAutoScroll = () => {
+                if (autoScrollId) {
+                    clearInterval(autoScrollId);
+                    autoScrollId = null;
+                }
+            };
+
+            const startAutoScroll = () => {
+                if (!track) { return; }
+                stopAutoScroll();
+                autoScrollId = setInterval(() => {
+                    const maxScroll = track.scrollWidth - track.clientWidth;
+                    if (Math.abs(track.scrollLeft - maxScroll) < 4) {
+                        track.scrollTo({ left: 0, behavior: 'smooth' });
+                    } else {
+                        track.scrollBy({ left: scrollAmount(), behavior: 'smooth' });
+                    }
+                }, 4000);
+            };
+
+            if (track) {
+                controlButtons.forEach(btn => {
+                    btn.addEventListener('click', () => {
+                        const direction = Number(btn.dataset.direction || 1);
+                        track.scrollBy({ left: scrollAmount() * direction, behavior: 'smooth' });
+                    });
+                });
+                track.addEventListener('pointerenter', stopAutoScroll);
+                track.addEventListener('pointerleave', startAutoScroll);
+                startAutoScroll();
+            } else {
+                controlButtons.forEach(btn => btn.disabled = true);
+            }
+
+            const lightbox = document.getElementById('galleryLightbox');
+            if (!lightbox || !galleryImages.length) { return; }
+
+            const lightboxImg = lightbox.querySelector('.lightbox-image');
+            const lightboxCaption = lightbox.querySelector('.lightbox-caption');
+            const closeBtn = lightbox.querySelector('.lightbox-close');
+            const navBtns = lightbox.querySelectorAll('.lightbox-nav');
+            let currentIndex = 0;
+
+            const captions = galleryImages.map(img => img.getAttribute('alt') || 'Foto');
+
+            const showImage = (index) => {
+                if (index < 0) { index = galleryImages.length - 1; }
+                if (index >= galleryImages.length) { index = 0; }
+                currentIndex = index;
+                lightboxImg.src = galleryImages[currentIndex].src;
+                lightboxImg.alt = captions[currentIndex];
+                if (lightboxCaption) {
+                    lightboxCaption.textContent = captions[currentIndex];
+                }
+            };
+
+            const openLightbox = (index) => {
+                stopAutoScroll();
+                showImage(index);
+                lightbox.classList.add('is-open');
+                lightbox.setAttribute('aria-hidden', 'false');
+                document.body.style.overflow = 'hidden';
+                closeBtn.focus();
+            };
+
+            const closeLightbox = () => {
+                lightbox.classList.remove('is-open');
+                lightbox.setAttribute('aria-hidden', 'true');
+                document.body.style.overflow = '';
+                if (track) { startAutoScroll(); }
+            };
+
+            galleryImages.forEach((img, index) => {
+                img.addEventListener('click', () => openLightbox(index));
+                img.addEventListener('keydown', (event) => {
+                    if (event.key === 'Enter' || event.key === ' ') {
+                        event.preventDefault();
+                        openLightbox(index);
+                    }
+                });
+                img.setAttribute('tabindex', '0');
+            });
+
+            closeBtn.addEventListener('click', closeLightbox);
+            lightbox.addEventListener('click', (event) => {
+                if (event.target === lightbox) {
+                    closeLightbox();
+                }
+            });
+
+            navBtns.forEach(btn => {
+                btn.addEventListener('click', () => {
+                    const direction = Number(btn.dataset.direction || 1);
+                    showImage(currentIndex + direction);
+                });
+            });
+
+            window.addEventListener('keydown', (event) => {
+                if (!lightbox.classList.contains('is-open')) { return; }
+                if (event.key === 'Escape') { closeLightbox(); }
+                if (event.key === 'ArrowRight') { showImage(currentIndex + 1); }
+                if (event.key === 'ArrowLeft') { showImage(currentIndex - 1); }
+            });
+        })();
+    </script>
 </body>
 </html>
-
-
 
