--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
             <div class="subtitle">Meryposa agenda</div>
             <h1>Viernes 17 de octubre</h1>
             <p class="intro">
-                Mery, arm&eacute; una tarde para que solo nos dediquemos a disfrutar. Golf suave, terraza con vista y cierre con jazz. Nada de apuros, solo nuestro ritmo.
+                Mery, te tengo una tarde para que solo nos dediquemos a disfrutar. Golfitos con apuestas, tomarnos unas cositas en la terraza y cerrar con un jazz. Nada de apuros, solo nuestro ritmo.
             </p>
             <div class="date-badge">19:00 &bull; Sport Fran&ccedil;ais &bull; Santiago</div>
         </header>
@@ -469,7 +469,7 @@
                     <div class="time"><span>19:00</span> Sport Fran&ccedil;ais</div>
                     <div class="activity">Golf al atardecer</div>
                     <p class="description">
-                        Primer bloque relajado para conversar y golpear un par de tiros con luz dorada. Tengo los horarios reservados.
+                        Primer bloque relajado para conversar y golpear un par de tiros el atardecer. Tengo los horarios reservados.
                     </p>
                 </article>
                 <article class="timeline-item">
