--- a/events/2-meses.html
+++ b/events/2-meses.html
@@ -50,7 +50,7 @@
             display: grid;
             gap: clamp(18px, 4vw, 28px);
             color: #fff;
-            background-image: linear-gradient(120deg, rgba(47, 143, 157, 0.78), rgba(48, 62, 77, 0.55)), url('FV/foto09.jpg');
+            background-image: linear-gradient(120deg, rgba(47, 143, 157, 0.78), rgba(48, 62, 77, 0.55)), url('../FV/foto09.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -682,4 +682,5 @@
     </script>
 </body>
 </html>
+
 
