Add startup invitation alert

--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
 
     <script>
         (function () {
+            alert('Hoy Invitación para Maria Gracia a celebrar el fin de su gran proyecto en Iquique! Horario 19:30 lista!');
+
             const events = [
                 {
                     id: '2-meses',
