Agregar sección 6 meses con invitación del 22 de mayo de 2026

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <article class="overlay-card">
             <header class="overlay-header">
                 <h1 class="overlay-title" id="menuTitle">Nuestros recuerdos</h1>
-                <p class="overlay-subtitle">Elige el momento que quieras revivir. El de 2 meses ya está listo y aparecerá seleccionado por defecto.</p>
+                <p class="overlay-subtitle">Elige el momento que quieras revivir. Puedes abrir 2 meses o la nueva invitación de 6 meses.</p>
             </header>
             <div class="event-list" id="eventList" role="listbox" aria-label="Recuerdos disponibles"></div>
             <div class="cta-group">
@@ -323,6 +323,13 @@
                     date: 'Viernes 17 de octubre de 2025',
                     description: 'Celebra nuestro segundo mes exactamente como lo vio ella ese día.',
                     path: 'events/2-meses.html'
+                },
+                {
+                    id: '6-meses',
+                    title: '6 meses',
+                    date: 'Viernes 22 de mayo de 2026',
+                    description: 'Invitación especial para celebrar seis meses con una noche inolvidable.',
+                    path: 'events/6-meses.html'
                 }
             ];
 
