--- a/events/6-meses.html
+++ b/events/6-meses.html
@@ -44,7 +44,7 @@
             position: relative;
             color: #fff;
             padding: clamp(42px, 9vw, 90px) clamp(24px, 7vw, 76px);
-            background: linear-gradient(120deg, rgba(47, 143, 157, 0.75), rgba(40, 56, 71, 0.52)), url('../FV/foto08.jpg') center/cover;
+            background: linear-gradient(120deg, rgba(47, 143, 157, 0.72), rgba(40, 56, 71, 0.54)), url('../media/6-meses/MERUTI.jpg') center 34%/cover;
             display: grid;
             gap: 14px;
         }
@@ -53,6 +53,33 @@
         h1 { margin: 0; font-family: 'Playfair Display', Georgia, serif; font-size: clamp(2rem, 7vw, 3.6rem); }
         .intro { max-width: 560px; color: rgba(255,255,255,.9); margin: 0; }
         .badge { display: inline-block; background: rgba(255,255,255,.26); padding: 10px 16px; border-radius: 999px; font-weight: 600; }
+
+        .invite-mini {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            border: 1px solid rgba(255,255,255,.45);
+            background: rgba(255,255,255,.22);
+            color: #fff;
+            border-radius: 999px;
+            min-height: 46px;
+            padding: 0 14px;
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 10px 20px rgba(20, 33, 47, .26);
+            transition: transform .2s ease, background .2s ease;
+        }
+
+        .invite-mini:hover,
+        .invite-mini:focus-visible {
+            transform: translateY(-1px) scale(1.03);
+            background: rgba(255,255,255,.32);
+            outline: none;
+        }
 
         section { padding: clamp(24px, 5vw, 50px); }
 
@@ -92,7 +119,7 @@
 
         .moments h2,
         .gallery h2,
-        .plan h2 {
+        .invite-teaser h2 {
             margin: 0 0 16px;
             font-family: 'Playfair Display', Georgia, serif;
             color: var(--accent);
@@ -118,23 +145,28 @@
 
         .moment-item p { margin: 0; font-size: .95rem; color: var(--text-soft); }
 
-        .plan-grid {
-            display: grid;
-            gap: 14px;
-            grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
+
+        .section-tip {
+            margin: -2px 0 14px;
+            color: var(--text-soft);
+            font-size: .92rem;
         }
 
-        .plan-card {
-            background: var(--surface);
-            border: 1px solid var(--border);
-            border-radius: 16px;
-            padding: 16px;
-            box-shadow: 0 10px 20px rgba(188, 197, 206, 0.2);
+        .editable-note {
+            margin: 0;
+            font-size: .95rem;
+            color: var(--text-soft);
+            border: 1px dashed rgba(47, 143, 157, 0.4);
+            border-radius: 10px;
+            padding: 10px;
+            background: rgba(47, 143, 157, 0.05);
         }
 
-        .time { color: var(--accent); font-weight: 600; letter-spacing: .08em; text-transform: uppercase; font-size: .8rem; }
-        .plan-card h3 { margin: 10px 0 8px; font-size: 1.05rem; }
-        .plan-card p { margin: 0; color: var(--text-soft); line-height: 1.55; }
+        .editable-note:focus {
+            outline: 2px solid rgba(47, 143, 157, 0.35);
+            outline-offset: 2px;
+            background: rgba(47, 143, 157, 0.09);
+        }
 
         .gallery-grid {
             margin-top: 14px;
@@ -161,12 +193,226 @@
             padding-left: 12px;
         }
 
+        .gallery-meta {
+            margin-top: 10px;
+            color: var(--text-soft);
+            font-size: .9rem;
+        }
+
+        .invite-teaser {
+            background: rgba(255,255,255,.74);
+            display: grid;
+            gap: 14px;
+        }
+
+        .invite-card {
+            border: 1px solid var(--border);
+            border-radius: 18px;
+            background: var(--surface);
+            box-shadow: 0 14px 26px rgba(188, 197, 206, 0.24);
+            width: min(360px, 100%);
+            padding: 14px;
+            display: grid;
+            gap: 12px;
+            cursor: pointer;
+            transition: transform .2s ease, box-shadow .2s ease;
+            text-align: left;
+            position: relative;
+            overflow: hidden;
+            border-bottom-width: 4px;
+        }
+
+        .invite-card::before {
+            content: "";
+            position: absolute;
+            inset: 0 auto auto 0;
+            width: 100%;
+            height: 82px;
+            background: linear-gradient(135deg, #f9eef2 0%, #f0dbe2 100%);
+            clip-path: polygon(0 0, 100% 0, 50% 100%);
+            opacity: .65;
+            pointer-events: none;
+        }
+
+        .invite-card:hover,
+        .invite-card:focus-visible {
+            transform: translateY(-2px);
+            box-shadow: 0 20px 32px rgba(172, 184, 196, 0.32);
+            outline: none;
+        }
+
+        .invite-thumb {
+            aspect-ratio: 5 / 3;
+            border-radius: 12px;
+            overflow: hidden;
+            border: 1px solid var(--border);
+        }
+
+        .invite-thumb img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+        .invite-card h3 {
+            margin: 0;
+            color: var(--accent);
+            font-family: 'Playfair Display', Georgia, serif;
+        }
+
+        .invite-card p {
+            margin: 0;
+            color: var(--text-soft);
+            font-size: .95rem;
+            line-height: 1.55;
+        }
+
+        .invite-secret {
+            margin-top: 6px;
+            font-size: .82rem;
+            letter-spacing: .08em;
+            text-transform: uppercase;
+            color: #9d6a7d;
+            font-weight: 600;
+        }
+
+        .invite-overlay {
+            position: fixed;
+            inset: 0;
+            display: grid;
+            place-items: center;
+            background: rgba(20, 28, 36, .6);
+            padding: clamp(16px, 4vw, 34px);
+            z-index: 30;
+            opacity: 1;
+            transition: opacity .2s ease;
+        }
+
+        .invite-overlay[aria-hidden="true"] {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .invite-sheet {
+            width: min(720px, 100%);
+            border-radius: 22px;
+            overflow: hidden;
+            border: 1px solid rgba(235, 242, 246, .9);
+            box-shadow: 0 28px 54px rgba(18, 29, 40, .35);
+            background: #fff;
+        }
+
+        .invite-cover {
+            min-height: 260px;
+            position: relative;
+            padding: clamp(24px, 6vw, 42px);
+            color: #fff;
+            background: linear-gradient(120deg, rgba(27, 58, 68, .5), rgba(20, 32, 44, .5)), url('../media/6-meses/Natalia.jpg') center/cover;
+            display: grid;
+            align-content: end;
+            gap: 10px;
+        }
+
+        .invite-cover h2,
+        .invite-cover p {
+            margin: 0;
+        }
+
+        .invite-content {
+            padding: clamp(20px, 5vw, 30px);
+            display: grid;
+            gap: 10px;
+            color: var(--text-soft);
+        }
+
+        .invite-content strong {
+            color: var(--text-main);
+        }
+
+        .invite-actions {
+            display: flex;
+            justify-content: flex-end;
+            padding: 0 clamp(20px, 5vw, 30px) clamp(20px, 5vw, 26px);
+        }
+
+        .invite-close {
+            border: none;
+            border-radius: 999px;
+            background: linear-gradient(120deg, var(--accent), #3caab5);
+            color: #fff;
+            padding: 10px 18px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
         footer {
             text-align: center;
             padding: 26px;
             color: var(--text-soft);
             border-top: 1px solid var(--border);
             background: rgba(255,255,255,.68);
+        }
+
+        @media (max-width: 640px) {
+            body {
+                padding: 10px;
+            }
+
+            .page {
+                border-radius: 18px;
+            }
+
+            header {
+                padding: 28px 16px 34px;
+                background-position: center;
+            }
+
+            .kicker {
+                font-size: .72rem;
+                letter-spacing: .16em;
+            }
+
+            .badge {
+                font-size: .85rem;
+                width: fit-content;
+            }
+
+            .invite-mini {
+                top: 12px;
+                right: 12px;
+                min-height: 42px;
+                padding: 0 12px;
+                font-size: .92rem;
+                gap: 6px;
+            }
+
+            section {
+                padding: 16px;
+            }
+
+            .highlight-grid,
+            .moment-grid,
+            .gallery-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .photo-main {
+                aspect-ratio: 4 / 5;
+            }
+
+            .photo-main img {
+                object-fit: contain;
+                background: #edf2f6;
+            }
+
+            .invite-card {
+                width: 100%;
+            }
+
+            .invite-cover {
+                min-height: 200px;
+            }
         }
 
         @media (min-width: 840px) {
@@ -181,6 +427,7 @@
 <body>
     <main class="page">
         <header>
+            <button class="invite-mini" id="openInviteMini" type="button" aria-label="Abrir invitación" aria-haspopup="dialog" aria-controls="inviteOverlay"><span aria-hidden="true">✉️</span><span>Invitación</span></button>
             <span class="kicker">Meryposa · 6 meses</span>
             <h1>Viernes 22 de mayo de 2026</h1>
             <p class="intro">Invitación especial para celebrar seis meses juntos: simple, bonito y con nuestras fotos repartidas por toda la página.</p>
@@ -191,63 +438,73 @@
             <div class="highlight-grid">
                 <figure class="photo-card photo-main"><img id="heroPhoto" alt="Foto destacada 6 meses"></figure>
                 <div class="details">
-                    <p><strong>Invitación:</strong> reserva la noche del 22 de mayo de 2026 para celebrar nuestros 6 meses.</p>
-                    <p><strong>Idea del plan:</strong> atardecer, cena rica y cierre caminando sin apuro.</p>
-                    <p><strong>Dress code:</strong> cómodo y elegante.</p>
-                    <p><strong>Mensaje:</strong> hoy no es un evento grande, es un momento nuestro.</p>
+                    <p contenteditable="true" class="editable-note"><strong>Bonito Sur - Express viaje a la comunidad Los Patos, primero de muchos..</strong></p>
                 </div>
             </div>
         </section>
 
-        <section class="plan">
-            <h2>Plan simple</h2>
-            <div class="plan-grid">
-                <article class="plan-card">
-                    <div class="time">18:30</div>
-                    <h3>Brindis de inicio</h3>
-                    <p>Nos juntamos para abrir la noche con algo rico y unas fotos lindas.</p>
+
+
+        <section class="moments">
+            <h2>Otro Momentos</h2>
+            <p class="section-tip">Merita querida tuve que subir solo 3 fotos porque no pude cargar mas a la pagina pero es claro que ni fotos ni evidencia para acordarse lo bueno de estos meses. Rezos, regaloneo y paz :)</p>
+            <div class="moment-grid">
+                <article class="moment-item">
+                    <figure class="moment-photo photo-card"><img id="momentPhoto1" alt="Espacio de foto 1"></figure>
+                    <p contenteditable="true" class="editable-note">Escribe aquí una frase corta...</p>
                 </article>
-                <article class="plan-card">
-                    <div class="time">20:00</div>
-                    <h3>Cena tranquila</h3>
-                    <p>Mesa reservada, conversación larga y tiempo para disfrutar.</p>
+                <article class="moment-item">
+                    <figure class="moment-photo photo-card"><img id="momentPhoto2" alt="Espacio de foto 2"></figure>
+                    <p contenteditable="true" class="editable-note">Escribe aquí otra frase...</p>
                 </article>
-                <article class="plan-card">
-                    <div class="time">22:30</div>
-                    <h3>Cierre caminando</h3>
-                    <p>Un paseo corto para cerrar el día y celebrar estos seis meses.</p>
+                <article class="moment-item">
+                    <figure class="moment-photo photo-card"><img id="momentPhoto3" alt="Espacio de foto 3"></figure>
+                    <p contenteditable="true" class="editable-note">Y aquí tu mensaje final...</p>
                 </article>
             </div>
         </section>
 
-        <section class="moments">
-            <h2>Momentos repartidos</h2>
-            <div class="moment-grid">
-                <article class="moment-item">
-                    <figure class="moment-photo photo-card"><img id="momentPhoto1" alt="Momento 1"></figure>
-                    <p>Un recuerdo natural que resume lo bien que la pasamos juntos.</p>
-                </article>
-                <article class="moment-item">
-                    <figure class="moment-photo photo-card"><img id="momentPhoto2" alt="Momento 2"></figure>
-                    <p>Otra imagen favorita para que la página se sienta más personal.</p>
-                </article>
-                <article class="moment-item">
-                    <figure class="moment-photo photo-card"><img id="momentPhoto3" alt="Momento 3"></figure>
-                    <p>Una tercera postal para distribuir las fotos en distintas partes.</p>
-                </article>
-            </div>
+        <section class="invite-teaser">
+            <h2>Invitación especial</h2>
+            <button class="invite-card" id="openInviteCard" type="button" aria-haspopup="dialog" aria-controls="inviteOverlay" aria-expanded="false">
+                <figure class="invite-thumb">
+                    <img src="../media/6-meses/Natalia.jpg" alt="Previa de Invitación Cancioncera del 22 de Mayo">
+                </figure>
+                <h3>Invitación Cancioncera el 22 de Mayo</h3>
+                <p>Haz clic para abrir la carta con todos los detalles de la invitación.</p>
+                <span class="invite-secret">Mensaje oculto · Toca para abrir</span>
+            </button>
         </section>
 
         <section class="gallery">
             <h2>Galería completa</h2>
             <div class="gallery-grid" id="galleryGrid" aria-label="Galería de 6 meses"></div>
-            <p class="gallery-note">Puedes pegar 46 fotos o más en <code>media/6-meses/</code> y regenerar el manifest.</p>
+            <p class="gallery-meta" id="galleryMeta"></p>
         </section>
 
         <footer>
             Hecho con cariño para nuestra celebración del 22 de mayo de 2026 💛
         </footer>
     </main>
+
+    <section class="invite-overlay" id="inviteOverlay" role="dialog" aria-modal="true" aria-labelledby="inviteTitle" aria-hidden="true">
+        <article class="invite-sheet">
+            <header class="invite-cover">
+                <p>Invitación especial</p>
+                <h2 id="inviteTitle">Invitación Cancioncera el 22 de Mayo</h2>
+                <p>Con mucho cariño y buena música ✨</p>
+            </header>
+            <div class="invite-content">
+                <p><strong>Fecha:</strong> Viernes 22 de mayo de 2026</p>
+                <p><strong>Lugar:</strong> Santiago</p>
+                <p><strong>Hora sugerida:</strong> 19:30 hrs</p>
+                <p><strong>Mensaje:</strong> Una noche para disfrutar juntos, cantar, reír y celebrar este momento especial.</p>
+            </div>
+            <div class="invite-actions">
+                <button class="invite-close" id="closeInviteCard" type="button">Cerrar invitación</button>
+            </div>
+        </article>
+    </section>
 
     <script>
         (function () {
@@ -257,6 +514,11 @@
             const momentPhoto1 = document.getElementById('momentPhoto1');
             const momentPhoto2 = document.getElementById('momentPhoto2');
             const momentPhoto3 = document.getElementById('momentPhoto3');
+            const galleryMeta = document.getElementById('galleryMeta');
+            const openInviteCard = document.getElementById('openInviteCard');
+            const openInviteMini = document.getElementById('openInviteMini');
+            const inviteOverlay = document.getElementById('inviteOverlay');
+            const closeInviteCard = document.getElementById('closeInviteCard');
 
             const fallbackImages = [
                 '../FV/foto01.jpg',
@@ -267,9 +529,11 @@
                 '../FV/foto06.jpg'
             ];
 
+            const normalizeSrc = (src) => encodeURI(src).replace(/#/g, '%23');
+
             const withFallback = (img, src, index) => {
                 if (!img) { return; }
-                img.src = src;
+                img.src = normalizeSrc(src);
                 img.addEventListener('error', () => {
                     img.src = fallbackImages[index % fallbackImages.length];
                 }, { once: true });
@@ -288,6 +552,9 @@
                     figure.appendChild(img);
                     galleryGrid.appendChild(figure);
                 });
+                if (galleryMeta) {
+                    galleryMeta.textContent = `${images.length} foto${images.length === 1 ? '' : 's'} cargada${images.length === 1 ? '' : 's'} para esta invitación.`;
+                }
             };
 
             fetch(manifestPath)
@@ -313,6 +580,44 @@
                     withFallback(momentPhoto3, fallbackImages[3], 3);
                     renderGallery(fallbackImages);
                 });
+
+            const openInvitation = () => {
+                if (!inviteOverlay) { return; }
+                inviteOverlay.setAttribute('aria-hidden', 'false');
+                if (openInviteCard) { openInviteCard.setAttribute('aria-expanded', 'true'); }
+            };
+
+            const closeInvitation = () => {
+                if (!inviteOverlay) { return; }
+                inviteOverlay.setAttribute('aria-hidden', 'true');
+                if (openInviteCard) { openInviteCard.setAttribute('aria-expanded', 'false'); }
+            };
+
+            if (openInviteCard) {
+                openInviteCard.addEventListener('click', openInvitation);
+            }
+
+            if (openInviteMini) {
+                openInviteMini.addEventListener('click', openInvitation);
+            }
+
+            if (closeInviteCard) {
+                closeInviteCard.addEventListener('click', closeInvitation);
+            }
+
+            if (inviteOverlay) {
+                inviteOverlay.addEventListener('click', (event) => {
+                    if (event.target === inviteOverlay) {
+                        closeInvitation();
+                    }
+                });
+            }
+
+            document.addEventListener('keydown', (event) => {
+                if (event.key === 'Escape') {
+                    closeInvitation();
+                }
+            });
         })();
     </script>
 </body>
